cabal-version: 2.4
name:
  embla
version:
  0.1
synopsis:
  execute actions periodically while avoiding drift
description:
  execute actions periodically while avoiding drift
homepage:
  https://github.com/chessai/embla
bug-reports:
  https://github.com/chessai/embla/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Utility
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    Embla
  build-depends:
    , base >= 4.10.1.0 && < 4.13
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/embla.git
